# SortingVisualizer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
.cache/clangd/index/: main.cpp.EE2ED67460991890.idx
.github/workflows/: build.yml
dependencies/: CMakeLists.txt
src/: ArrayManager.cpp  ArrayManager.h  CMakeLists.txt  ConfigWindow.cpp  ConfigWindow.h  Sine.cpp  Sine.h  SortAlgs.cpp  SortAlgs.h  Sorter.cpp  Sorter.h  main.cpp
